codegen more typesafe body
