# server/app/controllers/swagger/v1/smartresponse/Ticket.scala
@@ -1,48 +1,43 @@
 package controllers.swagger.v1.smartresponse
 
-import play.api.mvc._
-import com.google.inject.Inject
-import play.api.routing._
-import play.api.routing.sird._
-import play.api.libs.circe._
-import scala.concurrent.ExecutionContext
-import controllers.{AuthConfigImpl, ExtendedController}
-import jp.t2v.lab.play2.stackc.RequestWithAttributes
-import jp.t2v.lab.play2.auth.OptionalAuthElement
-import services.dao.UserDao
+import controllers.ExtendedController
 import io.circe.Json
-import play.api.libs.Files
 import io.circe.generic.auto._
 import io.circe.syntax._
+import play.api.libs.Files
+import play.api.libs.circe._
+import play.api.mvc._
+import play.api.routing._
+import play.api.routing.sird._
 import shared.models.swagger.smartresponse.v1._
 
 trait Ticket extends ExtendedController with SimpleRouter with Circe {
   def routes: Router.Routes = {
 
-    case GET(p"/last_ticket" ? q"authkey=$authkey") =>
+    case GET(p"/last_ticket") =>
       Action.async { implicit request =>
-        constructResult(getLast_ticket(authkey).map(e => Ok(e.asJson)))
+        constructResult(getLast_ticket().map(e => Ok(e.asJson)))
       }
 
-    case POST(p"/tickets" ? q"authkey=$authkey") =>
-      Action.async(circe.json) { implicit request =>
-        constructResult(postTickets(authkey).map(e => Ok(e.asJson)))
+    case POST(p"/tickets") =>
+      Action.async(circe.json[ApiTicketInfo]) { implicit request =>
+        constructResult(postTickets().map(e => Ok(e.asJson)))
       }
 
-    case PUT(p"/tickets/${ticketId}" ? q"authkey=$authkey") =>
-      Action.async(circe.json) { implicit request =>
-        constructResult(putTickets(authkey, ticketId))
+    case PUT(p"/tickets/${ticketId}") =>
+      Action.async(circe.json[ApiTicketInfo]) { implicit request =>
+        constructResult(putTickets(ticketId))
       }
 
-    case POST(p"/tickets/${ticketId}/media" ? q"authkey=$authkey") =>
+    case POST(p"/tickets/${ticketId}/media") =>
       Action.async(parse.multipartFormData) { implicit request =>
-        constructResult(postTicketsMedia(ticketId, authkey))
+        constructResult(postTicketsMedia(ticketId))
       }
 
   }
 
-  def getLast_ticket(authkey: String)(implicit request: RequestWithAttributes[AnyContent]): HttpResult[ApiTicket]
-  def postTickets(authkey: String)(implicit request: RequestWithAttributes[Json]): HttpResult[ApiTicket]
-  def putTickets(authkey: String, ticketId: String)(implicit request: RequestWithAttributes[Json]): HttpResult[Result]
-  def postTicketsMedia(ticketId: String, authkey: String)(implicit request: RequestWithAttributes[MultipartFormData[Files.TemporaryFile]]): HttpResult[Result]
+  def getLast_ticket()(implicit request: Request[AnyContent]): HttpResult[ApiTicket]
+  def postTickets()(implicit request: Request[ApiTicketInfo]): HttpResult[ApiTicket]
+  def putTickets(ticketId: String)(implicit request: Request[ApiTicketInfo]): HttpResult[Result]
+  def postTicketsMedia(ticketId: String)(implicit request: Request[MultipartFormData[Files.TemporaryFile]]): HttpResult[Result]
 }
