# server/app/controllers/swagger/v1/smartresponse/User.scala
@@ -1,36 +1,31 @@
 package controllers.swagger.v1.smartresponse
 
-import play.api.mvc._
-import com.google.inject.Inject
-import play.api.routing._
-import play.api.routing.sird._
-import play.api.libs.circe._
-import scala.concurrent.ExecutionContext
-import controllers.{AuthConfigImpl, ExtendedController}
-import jp.t2v.lab.play2.stackc.RequestWithAttributes
-import jp.t2v.lab.play2.auth.OptionalAuthElement
-import services.dao.UserDao
+import controllers.ExtendedController
 import io.circe.Json
-import play.api.libs.Files
 import io.circe.generic.auto._
 import io.circe.syntax._
+import play.api.libs.Files
+import play.api.libs.circe._
+import play.api.mvc._
+import play.api.routing._
+import play.api.routing.sird._
 import shared.models.swagger.smartresponse.v1._
 
 trait User extends ExtendedController with SimpleRouter with Circe {
   def routes: Router.Routes = {
 
-    case GET(p"/me" ? q"authkey=$authkey") =>
+    case GET(p"/me") =>
       Action.async { implicit request =>
-        constructResult(getMe(authkey).map(e => Ok(e.asJson)))
+        constructResult(getMe().map(e => Ok(e.asJson)))
       }
 
-    case PUT(p"/me" ? q"authkey=$authkey") =>
-      Action.async(circe.json) { implicit request =>
-        constructResult(putMe(authkey))
+    case PUT(p"/me") =>
+      Action.async(circe.json[UserData]) { implicit request =>
+        constructResult(putMe())
       }
 
   }
 
-  def getMe(authkey: String)(implicit request: RequestWithAttributes[AnyContent]): HttpResult[UserData]
-  def putMe(authkey: String)(implicit request: RequestWithAttributes[Json]): HttpResult[Result]
+  def getMe()(implicit request: Request[AnyContent]): HttpResult[UserData]
+  def putMe()(implicit request: Request[UserData]): HttpResult[Result]
 }
